# cabscript

./: .env  .env.local  .gitignore  .pre-commit-config.yaml  AGENTS.md  License.md  Makefile  README.md  _sidebar.md  cabinet.spec  index.html  pyproject.toml
.github/workflows/: release.yml
docs/: DSL.md  Designer_prompt.md  NORTH_STAR.md  TODO.md  WAYPOINT.md  architecture.md
docs/plans/: 1_definitions.md  2_cabinet_design_project_requirements.md  3_cabinet_design_coding_agent_plan.md  4_initial_ui.md  5_main_ui.md  5_main_ui_final.md  6_v4_fixes_and_features.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/store/: useSettings.ts  useStore.ts
frontend/src/styles/: global.css
frontend/src/types/: cabinet.ts
src/cabinetry/: __main__.py
src/cabinetry/app/: config.py  main.py  routes.py
src/cabinetry/compiler/: compile.py  context.py  defaults.py  doors_generator.py  hardware_generator.py  layout_solver.py  modules.py  parts_generator.py  resolve_dimensions.py  warnings.py
src/cabinetry/dsl/: dimensions.py  errors.py  parser.py  shorthand.py
src/cabinetry/examples/: kitchen_base.yaml  niche_closet.yaml  standing_cabinet.yaml
src/cabinetry/geometry/: export.py  (+4 more)
tests/: test_api.py  test_cutlist.py  test_defaults_merge.py  test_dimensions.py  test_doors_generator.py  test_dsl_parser.py  test_geometry_export.py  test_layout_solver.py  test_module_split.py  test_nesting.py  test_parts_generator.py  test_shorthand.py  test_stdlib_loader.py
(+59 files in other folders)
