[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cabinetry"
version = "0.1.0"
description = "Cabinet design DSL compiler and viewer"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "pyyaml",
  "trimesh",
  "scipy",
  "numpy",
  "jinja2",
  "python-multipart",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "mypy",
  "httpx",
  "black",
  "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cabinetry"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
